--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,11 +6,9 @@ body {
     width: 300px;
   }
 
-  #map{ 
-    height: 400px; 
-  }
+  
 }
 //background-image: url("../images/background.png");
 
-.angular-google-map-container { height: 400px; }
+.angular-google-map-container { height: 500px; width: auto;}
 
