zoom to markers when choosing day

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,5 +10,15 @@ body {
 }
 //background-image: url("../images/background.png");
 
-.angular-google-map-container { height: 500px; width: auto;}
+.angular-google-map-container { 
+	height: 400px; width: auto;
+}
+
+.light-blue {
+	margin-bottom: 25px;
+}
+
+.nav-wrapper img {
+	width: 64px;
+}
 
