--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,6 +34,8 @@ body {
 	overflow-y: scroll;
 	background-color: #EAE9D9;
 	margin-top: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
 	float: left;
 	p {
 		text-align: center;
@@ -42,14 +44,26 @@ body {
 
 .photoList {
 	width: 50%;
-	height: 235px;
+	height: 600px;
 	overflow-y: scroll;
 	margin-top: 10px;
 	padding-left: 20px;
+	padding-right: 20px;
 	background-color: #EAE9D9;
-
+	float:left;
 }
 
+.textsList {
+	width: 25%;
+	height: 235px;
+	overflow-y: scroll;
+	background-color: #EAE9D9;
+	margin-top: 10px;
+} 
+
+.dayPhotos {
+	width: 100%;
+}
 
 // for keeping scrollbar visable 
 ::-webkit-scrollbar {
