--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,12 +44,12 @@ body {
 
 .photoList {
 	width: 50%;
-	height: 600px;
+	height: 400px;
 	overflow-y: scroll;
 	margin-top: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
-	background-color: #EAE9D9;
+	background-color: #1C8EB3;
 	float:left;
 }
 
@@ -64,6 +64,11 @@ body {
 .dayPhotos {
 	width: 100%;
 }
+
+#searchBoxCreate {
+	width: 10%;
+}
+
 
 // for keeping scrollbar visable 
 ::-webkit-scrollbar {
